# search-ai-agent

./: .gitignore  main.py  pyproject.toml
src/: main.py  prompt.py  schema.py
